--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>docker-springboot</finalName>
 	</build>
-
 
 </project>
