--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 server.port=8085
+#connection
+spring.datasource.url=jdbc:sqlserver://demoSql:1433;databaseName=test
+spring.datasource.username=sa
+spring.datasource.password=n3o$oft123
+
+# Keep the connection alive if idle for a long time
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager)
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
