--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8085
+server.error.whitelabel.enabled=false
 #connection
 spring.datasource.url=jdbc:sqlserver://demoSql:1433;databaseName=test
 spring.datasource.username=sa
