--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8085
 server.error.whitelabel.enabled=false
 #connection
-spring.datasource.url=jdbc:sqlserver://demoSql:1433;databaseName=test
+spring.datasource.url=jdbc:sqlserver://0.0.0.0:1433;databaseName=test
 spring.datasource.username=sa
 spring.datasource.password=n3o$oft123
 
