--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8085
-server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+
 #connection
 spring.datasource.url=jdbc:sqlserver://0.0.0.0:1433;databaseName=test
 spring.datasource.username=sa
@@ -8,7 +9,7 @@ spring.datasource.password=n3o$oft123
 # Keep the connection alive if idle for a long time
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
